k8s/client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: grpc-guide
  name: client
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: grpcurl
    image: quay.io/rfelix/grpcurl:latest
    imagePullPolicy: IfNotPresent
    stdin: true
    tty: true
    volumeMounts:
      - name: config-volume
        mountPath: /config
        readOnly: true
  volumes:
    - name: config-volume
      configMap:
        name: grpcurl-config
