k8s/apicast.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: grpc-guide
  name: apicast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicast
  template:
    metadata:
      labels:
        app: apicast
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: gateway
          # image: quay.io/3scale/apicast:master
          image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.12
          imagePullPolicy: Always
          ports:
            - name: proxy
              port: 8080
              protocol: TCP
              containerPort: 8080
            - name: proxy-tls
              port: 8043
              protocol: TCP
              containerPort: 8043
            - name: management
              port: 8090
              protocol: TCP
              containerPort: 8090
          volumeMounts:
            - name: config-volume
              mountPath: /gateway
      volumes:
        - name: config-volume
          configMap:
            name: apicast-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-guide
  name: apicast-service
spec:
  selector:
    app: apicast
  ports:
  - port: 8080
    name: plaintext
    protocol: TCP
    targetPort: 8080
  - port: 8043
    name: proxy-tls
    protocol: TCP
    targetPort: 8043

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: grpc-guide
  name: apicast-route
spec:
  to:
    kind: Service
    name: apicast-service
    weight: 100
  port:
    targetPort: proxy-tls
  tls:
    termination: passthrough
  wildcardPolicy: None
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: grpc-guide
    deployment: apicast-api-server
  name: apicast-api-server
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: server
    image: hashicorp/http-echo
    imagePullPolicy: IfNotPresent
    args:
    - -text="xpto"
    - -listen=:8080
    ports:
    - name: dns
      port: 8080
      containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    deployment: apicast-api-server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
