k8s/endpoint.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: grpc-guide
    deployment: grpc-endpoint
  name: grpc-endpoint
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: server
    image: quay.io/redhatintegration/grpc-helloworld:1.0.0
    imagePullPolicy: Always
    ports:
    - name: grpc
      port: 9000
      containerPort: 9000
    volumeMounts:
      - name: config-volume
        mountPath: /certs
        readOnly: true
  volumes:
    - name: config-volume
      configMap:
        name: grpc-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-guide
    deployment: grpc-endpoint
  name: grpc-service
spec:
  selector:
    deployment: grpc-endpoint
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9000

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: grpc-guide
  name: grpc-route
spec:
  to:
    kind: Service
    name: apicast-service
    weight: 100
  port:
    targetPort: proxy-tls
  tls:
    termination: passthrough
  wildcardPolicy: None
